# journal-api

./: .dockerignore  .env.dev  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docker/: app.sh
migrations/: env.py
migrations/versions/: 157e8450381c_unique.py  20190f5dd9a0_backref.py  68c3d95bf1d9_unique.py  7fb898164a21_not_unique_for_journal_title.py  9fdf4763f6df_cascade.py  a67c7679a519_cascade_for_notes.py  d865076e6887_userid.py  dbbc7a6c69c8_init.py  e117894e951f_back_populates.py
nginx/: Dockerfile  nginx.conf
src/: Dockerfile  __init__.py  database.py  main.py  settings.py
src/api/: __init__.py  auth.py  journals.py  notes.py
src/models/: auth.py  journals.py  notes.py
src/schemas/: auth.py  journals.py  notes.py
src/services/: auth.py  journals.py  notes.py
